<resources>
    <string name="app_name">Free Cuisine</string>
    <string name="title_home">Casa</string>
    <string name="title_recipes">Recetas</string>
    <string name="title_settings">Ajustes</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Etiam ac orci massa. Suspendisse a libero a dolor elementum fringilla faucibus vitae leo.
        Mauris ut metus et quam faucibus lobortis dictum id ligula.</string>
    <string name="recipe_image">recipe image</string>
    <string name="recipe_image_transition_name">recipe_image_transition_name</string>
    <string name="recipe_title_transition_name">recipe_title_transition_name</string>
    <string name="bullet">\u2022</string>

    <string name="str_all_selected">Todas las categorias</string>
    <string name="recipes">Recetas</string>

    <string-array name="brands">
        <item>Huawei</item>
        <item>Honor</item>
        <item>HTC</item>
        <item>Xiaomi</item>
        <item>Realme</item>
        <item>Oppo</item>
    </string-array>

    <string-array name="tags">
        <item>All categories</item>
        <item>#fish</item>
        <item>#vegetables</item>
        <item>#appetizers</item>
        <item>#desserts</item>
        <item>#pasta</item>
        <item>#meat</item>
        <item>#shrimp</item>
        <item>#salads</item>
        <item>Other</item>
    </string-array>

    <string-array name="ingredients">
        <item>1 cebolla tierna </item>
        <item>1 diente de ajo </item>
        <item>1 manojo de perejil fresco </item>
        <item>1 vaso pequeño de vino blanco </item>
        <item>1 cucharada sopera de harina de </item>
        <item>trigo </item>
        <item>1 vaso pequeño de agua </item>
        <item>1 chorro de aceite de oliva </item>
        <item>300 gramos de salmón fresco</item>
        <item>1 huevo </item>
    </string-array>

    <string-array name="recipes_title">
        <item>Palitos de merluza</item>
        <item>Salmón en salsa verde</item>
        <item>Buñuelos de bacalao con cerveza</item>
        <item>Buñuelos de bacalao al horno</item>
        <item>Merluza en salsa verde</item>
        <item>Tarta de atún y choclo</item>
        <item>Sardinas al horno</item>
        <item>Bacalao espiritual</item>
        <item>Bacalao en sanfaina</item>
        <item>Sushi maki de atún</item>
    </string-array>

    <string-array name="recipes_cooking_time">
        <item>30m</item>
        <item>30m</item>
        <item>45m</item>
        <item>30m</item>
        <item>30m</item>
        <item>45m</item>
        <item>15m</item>
        <item>45m</item>
        <item>90m</item>
        <item>30m</item>
    </string-array>

    <string-array name="recipes_amount">
        <item>3</item>
        <item>2</item>
        <item>4</item>
        <item>2</item>
        <item>4</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>4</item>
        <item>4</item>
    </string-array>

    <string name="ingredients">Ingredientes</string>
    <string name="empty">Vacío</string>
    <string name="search">buscar</string>
    <string name="reload">Presione para recargar</string>
    <string name="steps">Pasos por Paso</string>
    <string name="dinner">cena</string>
    <string name="recommend">#recomendado</string>
    <string name="user_activity_header_icon">Icono</string>
    <string name="activity">#actividad</string>
    <string name="ic_graphic">Icono grafico</string>
    <string name="statistics">Grafica de uso</string>
    <string name="statistics_info">Sección actividad: Muestra el uso en porcentaje graficamente</string>


    <string name="minutes_ago">\ minutos atrás</string>
    <string name="one_second_ago">un segundo atrás</string>
    <string name="seconds_ago">\ segundos atrás</string>
    <string name="a_minute_ago">un minuto atrás</string>
    <string name="an_hour_ago">una hora atrás</string>
    <string name="hours_ago">\ horas atrás</string>
    <string name="yesterday">ayer</string>
    <string name="days_ago">\ días atrás</string>
    <string name="last_reading">Última lectura</string>
    <string name="last_reading_info">Sección actividad: Muestra última receta abierta por el usuario</string>
    <string name="ic_last_recipe">Icono ultima receta</string>
    <string name="test_email">elioworkemail@gmail.com</string>
    <string name="login">registrar</string>
    <string name="language">Idioma</string>
    <string name="vibration">Vibración</string>
    <string name="arrow">Flecha</string>
    <string name="email_about_page">dememoteam@gmail.com</string>
    <string name="app_version_about_page">Version: 1.0.0</string>
    <string name="play_store_about_page">Califíquenos en Play Store</string>
    <string name="instagram_about_page">Síganos en Instagram</string>
    <string name="contact_us_about_page">Contáctenos vía E-mail</string>
    <string name="title1_about_page">#realimentación</string>
    <string name="title2_about_page">#desarrollador</string>
    <string name="developer1_about_page">Elioenai Reyes</string>
    <string name="version">Versión:</string>
    <string name="icon">Icono</string>
    <string name="about">Acerca de</string>

    <string name="lorem_description_about_page">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus, risus in pretium
        tristique, ante metus consectetur felis, eu ultricies nisi lectus ac sem. Mauris lacinia
        nulla sed libero dignissim, quis pellentesque diam semper. Donec id finibus eros, et luctus
        nulla. Etiam non massa ornare, hendrerit lacus sit amet, fermentum odio.</string>
    <string name="lorem_ipsum_small">Lorem ipsum dolor sit amet</string>
    <string name="shuffle">Mezcla automática</string>
    <string name="network_error">¡Error de red! Por favor revise su conexion a internet</string>
    <string name="zero">0</string>
    <string name="recipe_cont">Recipes</string>
    <string name="last_sync">Última Sync</string>
    <string name="blank">---</string>>
    <string name="usage">Uso</string>
    <string name="bookmarks">Marcadores</string>
    <string name="vibration_description">Respuesta vibratoria para obtener una mejor experiencia de
        navegación a través de la pantalla táctil.</string>
    <string name="shuffle_description">Mezcla automática aleatoria de la lista de recetas para
        obtener un orden diferente cada vez que es mostrada al usuario.</string>
    <string name="sync">Sincronizar</string>
    <string name="refresh">refrescar</string>
    <string name="some_error">Algo malo paso, por favor cargue la vista de nuevo</string>
    <string name="saved">¡Salva en marcadores con éxito!</string>
    <string name="removed">¡Retiro de marcadores con éxito!</string>
    <string name="empty_list">Nada que mostrar</string>
    <string name="tips">#consejos</string>
    <string name="ok">¡Vale!</string>
    <string name="links_ops">Vínculos</string>
    <string name="exit_links_container">Vículos</string>
    <string name="cancel">Cancelar</string>
    <string name="some_error_go_to_bowser">No sea ha podido cargar esta vista.</string>
    <string name="aks_go_to_bowser">¿Desea acceder vía navegador?</string>
    <string name="share_recipe">Compartir usando:</string>
    <string name="app_button">Botón arriba</string>
    <string name="up_scrolling">Desplazamiento</string>
    <string name="up_scrollling_description">Botón que realiza el desplazamiento de la lista o vista
        al estado inicial.</string>-

    <string name="description_about_page">
        <b>Free Cuisine</b> es el resultado de la idea de desarrollar una forma fácil e intuitiva de
        cocinar sin complicaciones y sobre todo de manera <b>\"Gratis\"</b>. Este proyecto está principalmente
        inspirado en el excelente sitio web <a href="https://www.recetasgratis.net">Recetas gratis</a>
        y por el momento las recetas aquí encontradas provienen de este. Por tanto todo derecho de autor en lo que
        respecta origen de las recetas pertenece a \n<a href="https://www.recetasgratis.net">Recetas gratis</a>.\n
          <b>Free Cuisine</b> es parte de un proyecto en desarrollo que
        tiene como objetivo mejorar la experiencia de usuarios a la hora de navegar por sitios webs
        o apps que en demasiadas ocasiones no es la mejor, así como continuar esparciendo el amor
        por la cocina.
    </string>

    <string name="description_about_page2"><b>Free Cuisine</b> es parte de un proyecto en desarrollo que
        tiene como objetivo mejorar la experiencia de usuarios a la hora de navegar por sitios webs
        o apps que en demasiadas ocasiones no es la mejor, así como continuar esparciendo el amor
        por la cocina.</string>


    <string name="premium_dialog_ok">¡Si, seguro!</string>
    <string name="premium_dialog_no">No, gracias</string>
    <string name="get_premium">¡Hacerse Premium!</string>
    <string name="premium_congrats">¡Felicidades, es usuario PREMIUM ahora!</string>
    <string name="already_premium">Ya es miembro premium</string>
    <string name="you_are_premium_now">¡Ya es Premium!</string>
    <!-- Urls -->
    <string name="faild_billing_connection">Error en la conexión de facturación.</string>
    <string name="cant_not_query_product">Error no se pudo consultar el producto</string>
    <string name="seven">7</string>
    <string name="get_premium_ad_free">Hágase PREMIUM para obtener <b>Free Cuisine</b> SIN ANUNCIOS</string>
    <string name="ad_explication">El siguiente anuncio nos ayuda a desarrollar:</string>
    <string name="mission">Misión de <b>Free Cuisine</b></string>
    <string name="mission_description"><b>Free Cuisine</b> es parte de un proyecto en desarrollo que
        tiene como objetivo mejorar la experiencia de usuarios a la hora de navegar por sitios webs
        o apps que en demasiadas ocasiones no es la mejor, así como continuar esparciendo el amor
        por la cocina.</string>
    <string name="function_temporarily_disabled">Función temporalmente deshabilitada</string>
    <string name="ad_not_load">El anuncio no se cargó</string>

    <string-array name="day_codes">
        <item>mon_</item>
        <item>tue_</item>
        <item>wed_</item>
        <item>thu_</item>
        <item>fri_</item>
        <item>sat_</item>
        <item>sun_</item>
    </string-array>

</resources>