<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.MaterialComponents.Dialog"
    android:background="@drawable/background_gray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center|top"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/ic_info"
        android:gravity="center_horizontal"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_margin"
        android:padding="@dimen/default_padding"
        android:text="@string/some_error_go_to_bowser"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/text_second_color"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/url_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_1dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:text="@string/app_name"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/text_second_color"
        android:textSize="@dimen/description_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            style="@style/ok_button"
            android:text="@string/cancel"
            android:layout_margin="@dimen/default_margin"/>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_light_green"
            style="@style/ok_button"
            android:text="@string/ok"
            android:layout_margin="@dimen/default_margin"/>

    </LinearLayout>

</LinearLayout>