<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.erg.freecuisine.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_singleRecipeFragment"
            app:destination="@id/singleRecipeFragment"
            app:enterAnim="@anim/custom_enter_anim"
            app:exitAnim="@anim/custom_exit_anim"
            app:popEnterAnim="@anim/custom_enter_anim"
            app:popExitAnim="@anim/custom_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.erg.freecuisine.ui.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_navigation_recipes_to_recipeFragment"
            app:destination="@id/singleRecipeFragment"
            app:enterAnim="@anim/custom_enter_anim"
            app:exitAnim="@anim/custom_exit_anim"
            app:popEnterAnim="@anim/custom_enter_anim"
            app:popExitAnim="@anim/custom_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.erg.freecuisine.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/singleRecipeFragment"
        android:name="com.erg.freecuisine.ui.SingleRecipeFragment"
        android:label="fragment_recipe"
        tools:layout="@layout/fragment_single_recipe" />

</navigation>