<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Theme.MaterialComponents.Dialog"
    android:background="@drawable/background_gray"
    android:scrollbars="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray"
        android:padding="10dp">

    <ImageView
        android:id="@+id/iv_ic_dialog"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:elevation="@dimen/default_elevation"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_lunch_chef"
        android:contentDescription="@string/icon" />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/default_elevation"
        android:layout_centerInParent="true"
        android:layout_below="@+id/iv_ic_dialog"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:padding="@dimen/regular_window_padding"
        android:text="@string/mission_description"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_gray_btn_bg_color"
        android:background="@drawable/background_white"
        android:textSize="17sp"/>
    <Button
        android:id="@+id/ok"
        style="@style/ok_button"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/selector_gray"
        android:text="@string/ok"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_dialog"/>

    </RelativeLayout>

</ScrollView>