<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/default_elevation"
    card_view:cardBackgroundColor="@color/custom_white_text_color"
    card_view:cardCornerRadius="6dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/ic_graphic"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/default_margin"
                android:contentDescription="@string/ic_graphic"
                android:src="@drawable/ic_statistics"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_graphic"
                android:layout_toStartOf="@+id/ib_info__statics"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/statistics"
                android:textAlignment="center"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/titles_text_size"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/ib_info__statics"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/selector_white"
                android:contentDescription="@string/ic_last_recipe"
                android:src="@drawable/ic_question_mark"/>

        </RelativeLayout>
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <com.erg.freecuisine.views.CustomLineView
                android:id="@+id/custom_line_view"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:paddingEnd="@dimen/regular_window_padding"
                android:paddingStart="@dimen/regular_window_padding"
                android:layout_gravity="center_horizontal"/>
        </HorizontalScrollView>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>