<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOnPrimary"
    tools:context=".ui.BookmarksFragment">

    <RelativeLayout
        android:id="@+id/relative_layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_empty_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/default_padding"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_anim_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/empty"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                app:lottie_autoPlay="true"
                app:lottie_fileName="empty_box.json"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/empty"
                android:textAlignment="center"
                android:textSize="@dimen/titles_text_size"
                android:textColor="@color/text_second_color"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/default_padding"
                android:text="@string/reload"
                android:textAlignment="center"
                android:textColor="@color/text_second_color"
                android:textSize="@dimen/description_text_size"
                android:textStyle="italic" />

        </LinearLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_accent_bottom"
            android:layoutDirection="rtl"
            app:defaultQueryHint="@string/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_1dp"
            android:layout_below="@+id/searcher"
            android:fadeScrollbars="true"
            android:padding="@dimen/default_padding"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_recipe_card" />


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>